docs/book/samples/ch07/order_check.out
error[formatting]: function declarations appear in alphabetical order: `dango` before `taiyaki`
  --> order_check.kso:4:4
   4 | fn dango n
          ^
