docs/book/samples/ch07/order_check.kso
fn taiyaki n
  n + 50

fn dango n
  n + 50

main = print "{dango 350} {taiyaki 500}"
